testsuite/tests/parser/should_fail/readFail049.hs

x = {-# OPTIONS_LOCAL boom #-}
  1

