testsuite/tests/parser/should_fail/readFail049.stderr

readFail049.hs:2:22: error:
    unknown flag in  {-# OPTIONS_GHC #-} pragma: boom
